Believe sweetalerts are complete, fixed content-div not covering everything

--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -21,7 +21,7 @@ color: #DDDDDD;
 
 .content-div {
   background-color: white;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 h1 {
